tests/ui/invalid-compile-flags/emit-output-types-without-args.rs
//@ compile-flags: --emit
//@ error-pattern: Argument to option 'emit' missing
